bug(spacing): add spacing

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ footer {
     margin-left: 5vw;
     margin-right: 5vw;
   }
-  .last-p-contact {
+  .last-p {
     margin-bottom: 50px;
   }
   footer {
